Fix for strange alignment add-buttons

--- a/app/frontend/css/main.css
+++ b/app/frontend/css/main.css
@@ -1691,12 +1691,14 @@ form select {
     color: #c7c7c7; }
     .entry.add h4, .add.autocomplete-product-suggestion h4 {
       margin-bottom: 0px; }
-    .entry.add .entry-image i, .add.autocomplete-product-suggestion .entry-image i {
-      font-size: 12px;
-      font-size: 1rem;
-      height: 12px;
-      width: 12px;
-      margin: 1px auto; }
+    .entry.add .entry-image, .add.autocomplete-product-suggestion .entry-image {
+      height: auto; }
+      .entry.add .entry-image i, .add.autocomplete-product-suggestion .entry-image i {
+        font-size: 12px;
+        font-size: 1rem;
+        height: 12px;
+        width: 12px;
+        margin: 1px auto; }
   .entry.meal, .meal.autocomplete-product-suggestion {
     background-color: #ededed; }
     .entry.meal .entry-category, .meal.autocomplete-product-suggestion .entry-category {
