--- a/app/frontend/css/partials/elements/_entry.scss
+++ b/app/frontend/css/partials/elements/_entry.scss
@@ -160,6 +160,8 @@
     }
 
     .entry-image {
+      height: auto;
+
       i {
         @include pxToRem(12px);
         height: 12px;
